feat(mcq): fix structural corruptions in graphs-interview Q2-Q22 and saga/networking/resilience
Manually fix 10 corrupted MCQ blocks in graphs-interview.md (Q2-Q22):
- Replace generic placeholders with specific wrong options about graph algorithms
- Restore embedded Q headings as separate markdown sections
- Topics: adjacency structures, BFS/DFS, Dijkstra, Bellman-Ford, Floyd-Warshall, MST, cycles

Also includes agent fixes for:
- networking-interview.md: Q40-Q42 (eBPF, certificate pinning, TCP vs UDP)
- resilience-patterns-interview.md: final MCQ
- saga-pattern-interview.md: Q1-Q15

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>